[package]
name = "dynamic_shims"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
reqwest = {version = "0.12.0", features = ["json"]} 
serde = {version = "1.0.197", features = ["derive"]} 
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"]} 
openssl = { version = "0.10.59"}
log = "0.4.21"
