[package]
name = "pong_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10.59", features = ["vendored"] }
